test/sema/nontransitive-mutable.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

struct Foo: Copyable {
    var a: int
}

def bar(foo: Foo*) {
    // CHECK: [[@LINE+1]]:11: error: cannot assign to immutable variable 'a' of type 'int'
    foo.a = 42
}
